# 3C

BooleanAlgebraProofSystem/C++/FormulaEnumerator/: CMakeLists.txt
BooleanAlgebraProofSystem/C++/FormulaEnumerator/include/formula_enumerator/: enumerator.hpp  evaluator.hpp  formula.hpp  laws.hpp  proof_search.hpp  rewriter.hpp  symbols.hpp
BooleanAlgebraProofSystem/C++/FormulaEnumerator/src/: enumerator.cpp  evaluator.cpp  formula.cpp  main.cpp  proof_search.cpp  rewriter.cpp
BooleanAlgebraProofSystem/C++/FormulaEnumerator/tests/: formula_enumerator_tests.cpp  validate_invalid_cli.cmake
BooleanAlgebraProofSystem/C++/PolishConverter/: PE12L.cpp  PE21LF.cpp
BooleanAlgebraProofSystem/Java/FormulaEnumerator/: FormulaEnumerator.java
Reductions/NP-complete/converter/: CNFtoPolishConverter.cpp
